[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/FreePosition.gd" id="2"]

[node name="MainMenu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Title" type="Label" parent="VBox"]
text = "Jogo da Memória"
horizontal_alignment = 1
custom_minimum_size = Vector2(400, 0)
script = ExtResource("2")
enabled = true
position_px = Vector2(200, 120)

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 14)
script = ExtResource("2")
enabled = true
position_px = Vector2(0, 0)

[node name="NameLabel" type="Label" parent="VBox"]
text = "Seu nome:"
custom_minimum_size = Vector2(220, 0)
script = ExtResource("2")
enabled = true
position_px = Vector2(240, 200)

[node name="NameEdit" type="LineEdit" parent="VBox"]
placeholder_text = "Digite seu nome"
custom_minimum_size = Vector2(320, 34)
script = ExtResource("2")
enabled = true
position_px = Vector2(240, 235)

[node name="Start" type="Button" parent="VBox"]
text = "Iniciar"
disabled = true
custom_minimum_size = Vector2(180, 44)
script = ExtResource("2")
enabled = true
position_px = Vector2(310, 285)

[node name="Hint" type="Label" parent="VBox"]
text = "Complete os níveis em sequência.\nNo final, aparece o Top 5 por tempo total."
horizontal_alignment = 1
custom_minimum_size = Vector2(520, 0)
script = ExtResource("2")
enabled = true
position_px = Vector2(140, 350)

[connection signal="text_changed" from="VBox/NameEdit" to="." method="_on_name_changed"]
[connection signal="pressed" from="VBox/Start" to="." method="_on_start_pressed"]
